--- a/notebooks/dataset_exploration.ipynb
+++ b/notebooks/dataset_exploration.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "da639f85-53b8-432b-99ae-b1b59a7a2992",
    "metadata": {},
    "outputs": [
@@ -105,7 +105,7 @@
        "4        turkey   4"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "e049f081-a352-4c59-b4c4-4def56ce0f9c",
    "metadata": {},
    "outputs": [
@@ -184,7 +184,7 @@
        "4      atlocation   4"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "4e63383b-9736-48bd-8521-e74c02bc8120",
    "metadata": {},
    "outputs": [
@@ -275,7 +275,7 @@
        "4  356  0  2571  0.709293"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,28 +328,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "623fe66d-8da6-44b8-b698-db1185af7231",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>260</td>\n",
+       "      <td>2</td>\n",
+       "      <td>13895</td>\n",
+       "      <td>0.892709</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>693</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9231</td>\n",
+       "      <td>0.461485</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2281</td>\n",
+       "      <td>3</td>\n",
+       "      <td>12075</td>\n",
+       "      <td>0.709293</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>8686</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4571</td>\n",
+       "      <td>0.525878</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>11186</td>\n",
+       "      <td>3</td>\n",
+       "      <td>11186</td>\n",
+       "      <td>0.525878</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "array([2.60000000e+02, 2.00000000e+00, 1.38950000e+04, 8.92708786e-01])"
+       "       0  1      2         3\n",
+       "0    260  2  13895  0.892709\n",
+       "1    693  0   9231  0.461485\n",
+       "2   2281  3  12075  0.709293\n",
+       "3   8686  2   4571  0.525878\n",
+       "4  11186  3  11186  0.525878"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_triples.to_numpy()[0]"
+    "train_triples.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
+   "id": "1e27adff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 260,  693, 2281, ..., 8413,  828, 1023])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_triples[0].to_numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "181cc468",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.89270879, 0.46148519, 0.70929324, ..., 0.89270879, 0.70929324,\n",
+       "       0.89270879])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_triples[3].to_numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "3e6b98cf-6b27-4c38-a5a1-c5b094ff6938",
    "metadata": {},
    "outputs": [],
@@ -366,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "0ea6bc61-3444-44ba-9b74-5d4d7da844f4",
    "metadata": {},
    "outputs": [
@@ -376,7 +489,7 @@
        "((36,), (36,))"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "7213bb8e-b46e-46c2-905a-28f41aea3dc2",
    "metadata": {},
    "outputs": [],
@@ -435,7 +548,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
