--- a/notebooks/eda_nl27k.ipynb
+++ b/notebooks/eda_nl27k.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
        "4  25104  256   2396  0.718750"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,14 +115,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_2517096/2616627044.py:2: UserWarning: \n",
+      "/tmp/ipykernel_3418477/2616627044.py:2: UserWarning: \n",
       "\n",
       "`distplot` is a deprecated function and will be removed in seaborn v0.14.0.\n",
       "\n",
@@ -141,7 +141,7 @@
        "<Axes: xlabel='3', ylabel='Density'>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -163,27 +163,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.  , 0.05, 0.1 , 0.15, 0.2 , 0.25, 0.3 , 0.35, 0.4 , 0.45, 0.5 ,\n",
-       "       0.55, 0.6 , 0.65, 0.7 , 0.75, 0.8 , 0.85, 0.9 , 0.95])"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.arange(0, 1, 0.05)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -191,30 +170,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "t=0.5 0.7101945003353454\n",
-      "t=0.55 0.7093561368209256\n",
-      "t=0.6 0.7086653252850436\n",
-      "t=0.65 0.7079745137491616\n",
-      "t=0.7 0.7069684775318578\n",
-      "t=0.75 0.6402079141515761\n",
-      "t=0.8 0.6389671361502347\n",
-      "t=0.85 0.6370690811535882\n",
-      "t=0.9 0.5241649899396378\n",
-      "t=0.95 0.48805499664654595\n"
+      "t=0.00: 100.00\n",
+      "t=0.05: 100.00\n",
+      "t=0.10: 100.00\n",
+      "t=0.15: 99.94\n",
+      "t=0.20: 99.88\n",
+      "t=0.25: 99.82\n",
+      "t=0.30: 99.76\n",
+      "t=0.35: 99.69\n",
+      "t=0.40: 99.61\n",
+      "t=0.45: 71.12\n",
+      "t=0.50: 71.02\n",
+      "t=0.55: 70.94\n",
+      "t=0.60: 70.87\n",
+      "t=0.65: 70.80\n",
+      "t=0.70: 70.70\n",
+      "t=0.75: 64.02\n",
+      "t=0.80: 63.90\n",
+      "t=0.85: 63.71\n",
+      "t=0.90: 52.42\n",
+      "t=0.95: 48.81\n"
      ]
     }
    ],
    "source": [
-    "print('t=0.5', np.sum(train_df[3] > 0.5) / len(train_df))\n",
-    "print('t=0.55', np.sum(train_df[3] > 0.55) / len(train_df))\n",
-    "print('t=0.6', np.sum(train_df[3] > 0.6) / len(train_df))\n",
-    "print('t=0.65', np.sum(train_df[3] > 0.65) / len(train_df))\n",
-    "print('t=0.7', np.sum(train_df[3] > 0.7) / len(train_df))\n",
-    "print('t=0.75', np.sum(train_df[3] > 0.75) / len(train_df))\n",
-    "print('t=0.8', np.sum(train_df[3] > 0.8) / len(train_df))\n",
-    "print('t=0.85', np.sum(train_df[3] > 0.85) / len(train_df))\n",
-    "print('t=0.9', np.sum(train_df[3] > 0.9) / len(train_df))\n",
-    "print('t=0.95', np.sum(train_df[3] > 0.95) / len(train_df))"
+    "for t in np.arange(0, 1, 0.05):\n",
+    "    print(f\"t={t:.2f}: {np.sum(train_df[3] > t)*100/len(train_df):.2f}\")"
    ]
   }
  ],
