--- a/notebooks/eda_cn15k.ipynb
+++ b/notebooks/eda_cn15k.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
        "4  11186  3  11186  0.525878"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,14 +115,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1445715/2616627044.py:2: UserWarning: \n",
+      "/tmp/ipykernel_3416834/2616627044.py:2: UserWarning: \n",
       "\n",
       "`distplot` is a deprecated function and will be removed in seaborn v0.14.0.\n",
       "\n",
@@ -141,7 +141,7 @@
        "<Axes: xlabel='3', ylabel='Density'>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -163,58 +163,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.  , 0.05, 0.1 , 0.15, 0.2 , 0.25, 0.3 , 0.35, 0.4 , 0.45, 0.5 ,\n",
-       "       0.55, 0.6 , 0.65, 0.7 , 0.75, 0.8 , 0.85, 0.9 , 0.95])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.arange(0, 1, 0.05)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "t=0.5 0.7678843226788432\n",
-      "t=0.55 0.6803067556492214\n",
-      "t=0.6 0.6698132537173633\n",
-      "t=0.65 0.66030519455177\n",
-      "t=0.7 0.6525972758849471\n",
-      "t=0.75 0.2152899738516177\n",
-      "t=0.8 0.2088211762869297\n",
-      "t=0.85 0.2034890528041213\n",
-      "t=0.9 0.0329879405221871\n",
-      "t=0.95 0.02895347929594505\n"
+      "t=0.00: 100.00\n",
+      "t=0.05: 100.00\n",
+      "t=0.10: 99.92\n",
+      "t=0.15: 96.16\n",
+      "t=0.20: 93.06\n",
+      "t=0.25: 87.97\n",
+      "t=0.30: 85.41\n",
+      "t=0.35: 82.03\n",
+      "t=0.40: 80.01\n",
+      "t=0.45: 78.23\n",
+      "t=0.50: 76.79\n",
+      "t=0.55: 68.03\n",
+      "t=0.60: 66.98\n",
+      "t=0.65: 66.03\n",
+      "t=0.70: 65.26\n",
+      "t=0.75: 21.53\n",
+      "t=0.80: 20.88\n",
+      "t=0.85: 20.35\n",
+      "t=0.90: 3.30\n",
+      "t=0.95: 2.90\n"
      ]
     }
    ],
    "source": [
-    "print('t=0.5', np.sum(train_df[3] > 0.5) / len(train_df))\n",
-    "print('t=0.55', np.sum(train_df[3] > 0.55) / len(train_df))\n",
-    "print('t=0.6', np.sum(train_df[3] > 0.6) / len(train_df))\n",
-    "print('t=0.65', np.sum(train_df[3] > 0.65) / len(train_df))\n",
-    "print('t=0.7', np.sum(train_df[3] > 0.7) / len(train_df))\n",
-    "print('t=0.75', np.sum(train_df[3] > 0.75) / len(train_df))\n",
-    "print('t=0.8', np.sum(train_df[3] > 0.8) / len(train_df))\n",
-    "print('t=0.85', np.sum(train_df[3] > 0.85) / len(train_df))\n",
-    "print('t=0.9', np.sum(train_df[3] > 0.9) / len(train_df))\n",
-    "print('t=0.95', np.sum(train_df[3] > 0.95) / len(train_df))"
+    "for t in np.arange(0, 1, 0.05):\n",
+    "    print(f\"t={t:.2f}: {np.sum(train_df[3] > t)*100/len(train_df):.2f}\")"
    ]
   }
  ],
