--- a/notebooks/eda_ppi5k.ipynb
+++ b/notebooks/eda_ppi5k.ipynb
@@ -122,7 +122,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_2517271/2616627044.py:2: UserWarning: \n",
+      "/tmp/ipykernel_3418092/2616627044.py:2: UserWarning: \n",
       "\n",
       "`distplot` is a deprecated function and will be removed in seaborn v0.14.0.\n",
       "\n",
@@ -163,58 +163,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.  , 0.05, 0.1 , 0.15, 0.2 , 0.25, 0.3 , 0.35, 0.4 , 0.45, 0.5 ,\n",
-       "       0.55, 0.6 , 0.65, 0.7 , 0.75, 0.8 , 0.85, 0.9 , 0.95])"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.arange(0, 1, 0.05)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "t=0.5 0.27049006404565906\n",
-      "t=0.55 0.2193834468602904\n",
-      "t=0.6 0.15318994149717013\n",
-      "t=0.65 0.13333535415647232\n",
-      "t=0.7 0.12428928371923838\n",
-      "t=0.75 0.1121037201910544\n",
-      "t=0.8 0.09683928826609044\n",
-      "t=0.85 0.0790026371741964\n",
-      "t=0.9 0.049404795413308854\n",
-      "t=0.95 0.004746047486456876\n"
+      "t=0.00: 100.00\n",
+      "t=0.05: 100.00\n",
+      "t=0.10: 100.00\n",
+      "t=0.15: 99.71\n",
+      "t=0.20: 83.55\n",
+      "t=0.25: 76.61\n",
+      "t=0.30: 67.87\n",
+      "t=0.35: 49.88\n",
+      "t=0.40: 40.25\n",
+      "t=0.45: 35.49\n",
+      "t=0.50: 27.05\n",
+      "t=0.55: 21.94\n",
+      "t=0.60: 15.32\n",
+      "t=0.65: 13.33\n",
+      "t=0.70: 12.43\n",
+      "t=0.75: 11.21\n",
+      "t=0.80: 9.68\n",
+      "t=0.85: 7.90\n",
+      "t=0.90: 4.94\n",
+      "t=0.95: 0.47\n"
      ]
     }
    ],
    "source": [
-    "print('t=0.5', np.sum(train_df[3] > 0.5) / len(train_df))\n",
-    "print('t=0.55', np.sum(train_df[3] > 0.55) / len(train_df))\n",
-    "print('t=0.6', np.sum(train_df[3] > 0.6) / len(train_df))\n",
-    "print('t=0.65', np.sum(train_df[3] > 0.65) / len(train_df))\n",
-    "print('t=0.7', np.sum(train_df[3] > 0.7) / len(train_df))\n",
-    "print('t=0.75', np.sum(train_df[3] > 0.75) / len(train_df))\n",
-    "print('t=0.8', np.sum(train_df[3] > 0.8) / len(train_df))\n",
-    "print('t=0.85', np.sum(train_df[3] > 0.85) / len(train_df))\n",
-    "print('t=0.9', np.sum(train_df[3] > 0.9) / len(train_df))\n",
-    "print('t=0.95', np.sum(train_df[3] > 0.95) / len(train_df))"
+    "for t in np.arange(0, 1, 0.05):\n",
+    "    print(f\"t={t:.2f}: {np.sum(train_df[3] > t)*100/len(train_df):.2f}\")"
    ]
   }
  ],
