update train train_unc_baseline

--- a/notebooks/test_distmult_cn15k_unc.ipynb
+++ b/notebooks/test_distmult_cn15k_unc.ipynb
@@ -12,33 +12,24 @@
     "import pandas as pd\n",
     "import argparse\n",
     "\n",
+    "from typing import Tuple, List, Dict, Any\n",
+    "\n",
     "from ukge.datasets import KGTripleDataset\n",
-    "from ukge.models import TransE, DistMult, ComplEx, RotatE\n",
     "from ukge.losses import compute_det_transe_distmult_loss, compute_det_complex_loss, compute_det_rotate_loss\n",
     "from ukge.metrics import Evaluator\n",
+    "\n",
+    "\n",
+    "from typing import Tuple, List, Dict, Any\n",
+    "import torch.nn.functional as F\n",
+    "from torch import Tensor\n",
+    "from torch.nn import Embedding\n",
     "\n",
     "import torch\n",
     "import torch.optim as optim\n",
     "import torch.nn as nn\n",
     "from torch.utils.data import DataLoader\n",
-    "# from torch.utils.tensorboard import SummaryWriter\n",
     "\n",
     "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"0\"\n",
-    "# os.environ[\"CUDA_LAUNCH_BLOCKING\"] = \"1\"\n",
-    "\n",
-    "model_map = {\n",
-    "    'transe': TransE,\n",
-    "    'distmult': DistMult,\n",
-    "    'complex': ComplEx,\n",
-    "    'rotate': RotatE\n",
-    "}\n",
-    "\n",
-    "loss_map = {\n",
-    "    'transe': compute_det_transe_distmult_loss,\n",
-    "    'distmult': compute_det_transe_distmult_loss,\n",
-    "    'complex': compute_det_complex_loss,\n",
-    "    'rotate': compute_det_rotate_loss\n",
-    "}\n",
     "\n",
     "model = 'distmult'\n",
     "dataset = 'cn15k'\n",
@@ -50,6 +41,135 @@
     "weight_decay = 0.005\n",
     "\n",
     "model_checkpoint = '/home/mou/Projects/UKGE-FL/results/unc_cn15k_distmult_confi_logi/lr_0.01_wd_0.005_dim_128/best_model_ndcg_lin.pth'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class KGEModel(torch.nn.Module):\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        num_nodes: int,\n",
+    "        num_relations: int,\n",
+    "        hidden_channels: int,\n",
+    "        sparse: bool = False\n",
+    "    ):\n",
+    "        super().__init__()\n",
+    "        self.num_nodes = num_nodes\n",
+    "        self.num_relations = num_relations\n",
+    "        self.hidden_channels = hidden_channels\n",
+    "        self.node_emb = Embedding(num_nodes, hidden_channels, sparse=sparse)\n",
+    "        self.rel_emb = Embedding(num_relations, hidden_channels, sparse=sparse)\n",
+    "        self.fc = torch.nn.Sequential(\n",
+    "            # torch.nn.Linear(1, 1, bias=True),\n",
+    "            # torch.nn.Linear(1, 32, bias=True),\n",
+    "            # torch.nn.ReLU(inplace=True),\n",
+    "            # torch.nn.Linear(32, 32, bias=False),\n",
+    "            # torch.nn.ReLU(inplace=True),\n",
+    "            # torch.nn.Linear(32, 1, bias=False),\n",
+    "            torch.nn.Sigmoid()\n",
+    "        )\n",
+    "\n",
+    "    def reset_parameters(self):\n",
+    "        self.node_emb.reset_parameters()\n",
+    "        self.rel_emb.reset_parameters()\n",
+    "\n",
+    "    def forward(\n",
+    "        self,\n",
+    "        head_index: Tensor,\n",
+    "        rel_type: Tensor,\n",
+    "        tail_index: Tensor,\n",
+    "    ) -> Tensor:\n",
+    "        raise NotImplementedError\n",
+    "    \n",
+    "    def get_embeddings(\n",
+    "        self,\n",
+    "        head_index: Tensor,\n",
+    "        rel_type: Tensor,\n",
+    "        tail_index: Tensor,\n",
+    "    ):\n",
+    "        raise NotImplementedError\n",
+    "    \n",
+    "    def get_plausibility_score(\n",
+    "        self,\n",
+    "        head_index: Tensor,\n",
+    "        rel_type: Tensor,\n",
+    "        tail_index: Tensor,\n",
+    "    ) -> Tensor:\n",
+    "        raise NotImplementedError\n",
+    "\n",
+    "    def get_confidence_score(\n",
+    "        self,\n",
+    "        head_index: Tensor,\n",
+    "        rel_type: Tensor,\n",
+    "        tail_index: Tensor,\n",
+    "    ) -> Tensor:\n",
+    "        raise NotImplementedError\n",
+    "    \n",
+    "class DistMult(KGEModel):\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        num_nodes: int,\n",
+    "        num_relations: int,\n",
+    "        hidden_channels: int,\n",
+    "        sparse: bool = False,\n",
+    "        confidence_score_function: str = \"logi\",\n",
+    "    ):\n",
+    "        super().__init__(num_nodes, num_relations, hidden_channels, sparse)\n",
+    "        self.confidence_score_function = confidence_score_function\n",
+    "        self.reset_parameters()\n",
+    "\n",
+    "    def reset_parameters(self):\n",
+    "        torch.nn.init.xavier_uniform_(self.node_emb.weight)\n",
+    "        torch.nn.init.xavier_uniform_(self.rel_emb.weight)\n",
+    "\n",
+    "    def forward(\n",
+    "        self,\n",
+    "        head_index: Tensor,\n",
+    "        rel_type: Tensor,\n",
+    "        tail_index: Tensor,\n",
+    "    ) -> Tensor:\n",
+    "        head = self.node_emb(head_index)\n",
+    "        rel = self.rel_emb(rel_type)\n",
+    "        tail = self.node_emb(tail_index)\n",
+    "        return (head * rel * tail).sum(dim=-1)\n",
+    "\n",
+    "    def get_embeddings(\n",
+    "        self,\n",
+    "        head_index: Tensor,\n",
+    "        rel_type: Tensor,\n",
+    "        tail_index: Tensor,\n",
+    "    ) -> Tuple[Tensor, Tensor, Tensor]:\n",
+    "        head = self.node_emb(head_index)\n",
+    "        rel = self.rel_emb(rel_type)\n",
+    "        tail = self.node_emb(tail_index)\n",
+    "        return head, rel, tail\n",
+    "    \n",
+    "    def get_confidence_score(\n",
+    "        self,\n",
+    "        head_index: Tensor,\n",
+    "        rel_type: Tensor,\n",
+    "        tail_index: Tensor\n",
+    "    ) -> Tensor:\n",
+    "        head = self.node_emb(head_index)\n",
+    "        rel = self.rel_emb(rel_type)\n",
+    "        tail = self.node_emb(tail_index)\n",
+    "        plausibility_score = (head * rel * tail).sum(dim=-1)\n",
+    "        if self.confidence_score_function == \"logi\":\n",
+    "            return torch.sigmoid(self.fc(plausibility_score.view(-1, 1)).view(-1))\n",
+    "        elif self.confidence_score_function == \"rect\":\n",
+    "            return torch.clamp(self.fc(plausibility_score.view(-1, 1)).view(-1), min=0, max=1)\n",
+    "\n",
+    "    def get_plausibility_score(\n",
+    "        self,\n",
+    "        head_index: Tensor,\n",
+    "        rel_type: Tensor,\n",
+    "        tail_index: Tensor,\n",
+    "    ) -> Tensor:\n",
+    "        return self.forward(head_index, rel_type, tail_index)"
    ]
   },
   {
@@ -66,7 +186,8 @@
     "test_dataloader = DataLoader(test_dataset, batch_size=batch_size, shuffle=False)\n",
     "\n",
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
-    "model = model_map[model](num_nodes=train_dataset.num_cons(), num_relations=train_dataset.num_rels(), hidden_channels=hidden_dim, confidence_score_function=confidence_score_function)\n",
+    "\n",
+    "model = DistMult(num_nodes=train_dataset.num_cons(), num_relations=train_dataset.num_rels(), hidden_channels=hidden_dim, confidence_score_function=confidence_score_function)\n",
     "\n",
     "model.load_state_dict(torch.load(model_checkpoint)['state_dict'])\n",
     "model = model.to(device)\n",
