--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,12 +15,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "base_path = \"/home/mou/Projects/UKGE-FL/data\"\n",
-    "dataset = \"cn15k\"\n",
+    "datasets = [\"cn15k\", \"nl27k\", \"ppi5k\"]\n",
+    "dataset = datasets[2]\n",
     "data_path = osp.join(base_path, dataset, \"data.tsv\")\n",
     "test_data_path = osp.join(base_path, dataset, \"test.tsv\")\n",
     "test_neg_data_path = osp.join(base_path, dataset, \"test_with_neg.tsv\")\n",
@@ -32,16 +33,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(19293, 38586)"
+       "(21720, 43440)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,14 +86,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5634"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# cn15k 12224;\n",
+    "# nl27k 9563;\n",
+    "# ppi5k 5634;\n",
+    "len(hr_num_t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "200 23100\n"
+      "200 25398\n"
      ]
     }
    ],
