--- a/notebooks/test_eval.ipynb
+++ b/notebooks/test_eval.ipynb
@@ -49,7 +49,7 @@
     "fc_layers = 'l1'\n",
     "bias = False\n",
     "\n",
-    "model_checkpoint_path = '/home/mou/Projects/UKGE-FL/results/unc_nl27k_distmult_confi_logi_fc_l1_bias_False_dim_128/lr_0.01_wd_0.0/best_model_ndcg_exp_topk.pth'"
+    "model_checkpoint_path = '/home/mou/Projects/UKGE-FL/results_bk/unc_nl27k_distmult_confi_logi_fc_l1_bias_False_dim_128/lr_0.01_wd_0.0/best_model_ndcg_exp_topk.pth'"
    ]
   },
   {
@@ -97,35 +97,6 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{205: {},\n",
-       " 363: {},\n",
-       " 170: {},\n",
-       " 290: {},\n",
-       " 315: {},\n",
-       " 334: {},\n",
-       " 354: {},\n",
-       " 178: {},\n",
-       " 200: {},\n",
-       " 406: {}}"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "val_evaluator.hr_tp_map[18365]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -139,12 +110,13 @@
     "val_evaluator.update()\n",
     "val_mean_ndcg = val_evaluator.get_mean_ndcg()\n",
     "val_mse = val_evaluator.get_mse()\n",
-    "val_mae = val_evaluator.get_mae()"
+    "val_mae = val_evaluator.get_mae()\n",
+    "val_p, val_r, val_f1 = val_evaluator.get_f1()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -155,13 +127,116 @@
        " 0.12886432108325382)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "val_mean_ndcg, val_mse, val_mae"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "At threshold: 0.0\n",
+      "\tPrecision: ['1.0000', '1.0000', '1.0000', '1.0000', '1.0000', '1.0000', '1.0000', '1.0000', '1.0000', '1.0000', '1.0000', '1.0000', '1.0000', '1.0000', '1.0000', '1.0000', '1.0000', '1.0000', '1.0000', '1.0000']\n",
+      "\tRecall: ['1.0000', '0.9824', '0.9747', '0.9700', '0.9641', '0.9582', '0.9471', '0.9229', '0.8751', '0.8058', '0.7452', '0.7106', '0.6964', '0.6851', '0.6631', '0.6364', '0.6152', '0.5729', '0.5081', '0.4210']\n",
+      "\tF1: ['1.0000', '0.9911', '0.9872', '0.9848', '0.9817', '0.9787', '0.9728', '0.9599', '0.9334', '0.8924', '0.8540', '0.8308', '0.8211', '0.8131', '0.7974', '0.7778', '0.7617', '0.7285', '0.6738', '0.5925']\n",
+      "At threshold: 0.05\n",
+      "\tPrecision: ['1.0000', '1.0000', '1.0000', '1.0000', '1.0000', '1.0000', '1.0000', '1.0000', '1.0000', '1.0000', '1.0000', '1.0000', '1.0000', '1.0000', '1.0000', '1.0000', '1.0000', '1.0000', '1.0000', '1.0000']\n",
+      "\tRecall: ['1.0000', '0.9824', '0.9747', '0.9700', '0.9641', '0.9582', '0.9471', '0.9229', '0.8751', '0.8058', '0.7452', '0.7106', '0.6964', '0.6851', '0.6631', '0.6364', '0.6152', '0.5729', '0.5081', '0.4210']\n",
+      "\tF1: ['1.0000', '0.9911', '0.9872', '0.9848', '0.9817', '0.9787', '0.9728', '0.9599', '0.9334', '0.8924', '0.8540', '0.8308', '0.8211', '0.8131', '0.7974', '0.7778', '0.7617', '0.7285', '0.6738', '0.5925']\n",
+      "At threshold: 0.1\n",
+      "\tPrecision: ['1.0000', '1.0000', '1.0000', '1.0000', '1.0000', '1.0000', '1.0000', '1.0000', '1.0000', '1.0000', '1.0000', '1.0000', '1.0000', '1.0000', '1.0000', '1.0000', '1.0000', '1.0000', '1.0000', '1.0000']\n",
+      "\tRecall: ['1.0000', '0.9824', '0.9747', '0.9700', '0.9641', '0.9582', '0.9471', '0.9229', '0.8751', '0.8058', '0.7452', '0.7106', '0.6964', '0.6851', '0.6631', '0.6364', '0.6152', '0.5729', '0.5081', '0.4210']\n",
+      "\tF1: ['1.0000', '0.9911', '0.9872', '0.9848', '0.9817', '0.9787', '0.9728', '0.9599', '0.9334', '0.8924', '0.8540', '0.8308', '0.8211', '0.8131', '0.7974', '0.7778', '0.7617', '0.7285', '0.6738', '0.5925']\n",
+      "At threshold: 0.15000000000000002\n",
+      "\tPrecision: ['0.9994', '0.9994', '0.9997', '0.9998', '0.9999', '1.0000', '1.0000', '1.0000', '1.0000', '1.0000', '1.0000', '1.0000', '1.0000', '1.0000', '1.0000', '1.0000', '1.0000', '1.0000', '1.0000', '1.0000']\n",
+      "\tRecall: ['1.0000', '0.9824', '0.9750', '0.9704', '0.9646', '0.9588', '0.9476', '0.9234', '0.8756', '0.8062', '0.7456', '0.7110', '0.6968', '0.6855', '0.6634', '0.6368', '0.6155', '0.5732', '0.5084', '0.4212']\n",
+      "\tF1: ['0.9997', '0.9908', '0.9872', '0.9849', '0.9819', '0.9789', '0.9731', '0.9602', '0.9337', '0.8927', '0.8542', '0.8311', '0.8213', '0.8134', '0.7977', '0.7781', '0.7620', '0.7287', '0.6741', '0.5928']\n",
+      "At threshold: 0.2\n",
+      "\tPrecision: ['0.9988', '0.9988', '0.9992', '0.9993', '0.9997', '0.9999', '0.9999', '0.9999', '0.9999', '0.9999', '0.9999', '0.9999', '0.9999', '0.9999', '0.9999', '0.9999', '0.9999', '0.9999', '0.9998', '0.9998']\n",
+      "\tRecall: ['1.0000', '0.9824', '0.9750', '0.9706', '0.9649', '0.9593', '0.9481', '0.9239', '0.8761', '0.8067', '0.7460', '0.7114', '0.6972', '0.6859', '0.6638', '0.6371', '0.6158', '0.5735', '0.5086', '0.4214']\n",
+      "\tF1: ['0.9994', '0.9905', '0.9870', '0.9847', '0.9820', '0.9792', '0.9733', '0.9604', '0.9339', '0.8929', '0.8545', '0.8313', '0.8216', '0.8136', '0.7979', '0.7783', '0.7622', '0.7289', '0.6742', '0.5929']\n",
+      "At threshold: 0.25\n",
+      "\tPrecision: ['0.9986', '0.9986', '0.9990', '0.9992', '0.9996', '0.9999', '0.9999', '0.9999', '0.9999', '0.9999', '0.9999', '0.9999', '0.9999', '0.9999', '0.9999', '0.9999', '0.9999', '0.9999', '0.9998', '0.9998']\n",
+      "\tRecall: ['1.0000', '0.9824', '0.9750', '0.9706', '0.9650', '0.9595', '0.9483', '0.9241', '0.8763', '0.8068', '0.7461', '0.7115', '0.6973', '0.6860', '0.6639', '0.6372', '0.6159', '0.5736', '0.5087', '0.4215']\n",
+      "\tF1: ['0.9993', '0.9904', '0.9869', '0.9847', '0.9820', '0.9793', '0.9734', '0.9605', '0.9340', '0.8930', '0.8546', '0.8314', '0.8216', '0.8137', '0.7980', '0.7784', '0.7623', '0.7290', '0.6743', '0.5930']\n",
+      "At threshold: 0.30000000000000004\n",
+      "\tPrecision: ['0.9978', '0.9978', '0.9982', '0.9984', '0.9991', '0.9994', '0.9996', '0.9996', '0.9996', '0.9997', '0.9997', '0.9999', '0.9999', '0.9999', '0.9999', '0.9999', '0.9999', '0.9999', '0.9998', '0.9998']\n",
+      "\tRecall: ['1.0000', '0.9824', '0.9750', '0.9706', '0.9653', '0.9598', '0.9487', '0.9246', '0.8767', '0.8073', '0.7466', '0.7121', '0.6979', '0.6866', '0.6644', '0.6377', '0.6164', '0.5741', '0.5091', '0.4218']\n",
+      "\tF1: ['0.9989', '0.9900', '0.9865', '0.9843', '0.9819', '0.9792', '0.9735', '0.9606', '0.9342', '0.8932', '0.8548', '0.8318', '0.8220', '0.8141', '0.7984', '0.7788', '0.7627', '0.7294', '0.6747', '0.5933']\n",
+      "At threshold: 0.35000000000000003\n",
+      "\tPrecision: ['0.9971', '0.9971', '0.9975', '0.9977', '0.9984', '0.9989', '0.9992', '0.9995', '0.9995', '0.9997', '0.9997', '0.9999', '0.9999', '0.9999', '0.9999', '0.9999', '0.9999', '0.9999', '0.9998', '0.9998']\n",
+      "\tRecall: ['1.0000', '0.9824', '0.9751', '0.9707', '0.9654', '0.9600', '0.9491', '0.9251', '0.8773', '0.8079', '0.7471', '0.7126', '0.6984', '0.6871', '0.6649', '0.6382', '0.6169', '0.5745', '0.5095', '0.4222']\n",
+      "\tF1: ['0.9985', '0.9897', '0.9862', '0.9840', '0.9816', '0.9790', '0.9735', '0.9608', '0.9344', '0.8936', '0.8551', '0.8322', '0.8224', '0.8145', '0.7987', '0.7791', '0.7630', '0.7297', '0.6750', '0.5936']\n",
+      "At threshold: 0.4\n",
+      "\tPrecision: ['0.9958', '0.9958', '0.9962', '0.9965', '0.9973', '0.9979', '0.9983', '0.9986', '0.9989', '0.9992', '0.9993', '0.9997', '0.9996', '0.9996', '0.9996', '0.9999', '0.9999', '0.9999', '0.9998', '0.9998']\n",
+      "\tRecall: ['1.0000', '0.9824', '0.9751', '0.9707', '0.9656', '0.9602', '0.9495', '0.9255', '0.8779', '0.8085', '0.7478', '0.7134', '0.6992', '0.6878', '0.6656', '0.6390', '0.6177', '0.5752', '0.5101', '0.4227']\n",
+      "\tF1: ['0.9979', '0.9890', '0.9855', '0.9834', '0.9812', '0.9787', '0.9733', '0.9606', '0.9345', '0.8938', '0.8555', '0.8326', '0.8228', '0.8149', '0.7991', '0.7797', '0.7636', '0.7303', '0.6756', '0.5942']\n",
+      "At threshold: 0.45\n",
+      "\tPrecision: ['0.7412', '0.7427', '0.7445', '0.7450', '0.7467', '0.7495', '0.7552', '0.7713', '0.8079', '0.8715', '0.9352', '0.9741', '0.9873', '0.9906', '0.9926', '0.9951', '0.9962', '0.9967', '0.9981', '0.9994']\n",
+      "\tRecall: ['1.0000', '0.9844', '0.9789', '0.9749', '0.9712', '0.9689', '0.9649', '0.9603', '0.9539', '0.9474', '0.9401', '0.9339', '0.9276', '0.9156', '0.8879', '0.8544', '0.8267', '0.7704', '0.6841', '0.5676']\n",
+      "\tF1: ['0.8514', '0.8467', '0.8457', '0.8446', '0.8443', '0.8452', '0.8473', '0.8555', '0.8748', '0.9079', '0.9376', '0.9536', '0.9565', '0.9516', '0.9374', '0.9194', '0.9036', '0.8690', '0.8118', '0.7240']\n",
+      "At threshold: 0.5\n",
+      "\tPrecision: ['0.7404', '0.7419', '0.7436', '0.7442', '0.7459', '0.7487', '0.7544', '0.7706', '0.8073', '0.8710', '0.9350', '0.9740', '0.9873', '0.9906', '0.9926', '0.9951', '0.9962', '0.9967', '0.9981', '0.9994']\n",
+      "\tRecall: ['1.0000', '0.9844', '0.9789', '0.9749', '0.9712', '0.9689', '0.9649', '0.9605', '0.9541', '0.9479', '0.9409', '0.9348', '0.9286', '0.9166', '0.8889', '0.8554', '0.8276', '0.7712', '0.6849', '0.5683']\n",
+      "\tF1: ['0.8509', '0.8461', '0.8452', '0.8441', '0.8438', '0.8446', '0.8468', '0.8552', '0.8746', '0.9078', '0.9379', '0.9540', '0.9570', '0.9522', '0.9379', '0.9200', '0.9041', '0.8696', '0.8123', '0.7245']\n",
+      "At threshold: 0.55\n",
+      "\tPrecision: ['0.7393', '0.7408', '0.7425', '0.7430', '0.7447', '0.7475', '0.7534', '0.7697', '0.8063', '0.8700', '0.9342', '0.9734', '0.9867', '0.9900', '0.9921', '0.9949', '0.9959', '0.9966', '0.9979', '0.9994']\n",
+      "\tRecall: ['1.0000', '0.9844', '0.9788', '0.9749', '0.9711', '0.9688', '0.9651', '0.9608', '0.9545', '0.9482', '0.9416', '0.9357', '0.9295', '0.9175', '0.8898', '0.8565', '0.8287', '0.7723', '0.6858', '0.5691']\n",
+      "\tF1: ['0.8501', '0.8454', '0.8444', '0.8433', '0.8430', '0.8439', '0.8462', '0.8547', '0.8742', '0.9074', '0.9379', '0.9542', '0.9572', '0.9524', '0.9382', '0.9205', '0.9046', '0.8702', '0.8129', '0.7253']\n",
+      "At threshold: 0.6000000000000001\n",
+      "\tPrecision: ['0.7386', '0.7401', '0.7418', '0.7423', '0.7440', '0.7468', '0.7527', '0.7690', '0.8057', '0.8693', '0.9334', '0.9727', '0.9862', '0.9897', '0.9920', '0.9948', '0.9958', '0.9964', '0.9978', '0.9994']\n",
+      "\tRecall: ['1.0000', '0.9843', '0.9788', '0.9749', '0.9711', '0.9688', '0.9650', '0.9607', '0.9546', '0.9483', '0.9417', '0.9358', '0.9299', '0.9180', '0.8905', '0.8571', '0.8293', '0.7729', '0.6863', '0.5696']\n",
+      "\tF1: ['0.8497', '0.8449', '0.8440', '0.8428', '0.8425', '0.8434', '0.8457', '0.8542', '0.8738', '0.9071', '0.9375', '0.9539', '0.9572', '0.9525', '0.9385', '0.9208', '0.9049', '0.8705', '0.8132', '0.7257']\n",
+      "At threshold: 0.65\n",
+      "\tPrecision: ['0.7378', '0.7393', '0.7410', '0.7416', '0.7433', '0.7460', '0.7520', '0.7682', '0.8049', '0.8686', '0.9329', '0.9723', '0.9858', '0.9894', '0.9918', '0.9946', '0.9956', '0.9963', '0.9976', '0.9994']\n",
+      "\tRecall: ['1.0000', '0.9844', '0.9789', '0.9749', '0.9712', '0.9689', '0.9652', '0.9609', '0.9547', '0.9486', '0.9422', '0.9364', '0.9306', '0.9188', '0.8913', '0.8579', '0.8301', '0.7736', '0.6869', '0.5703']\n",
+      "\tF1: ['0.8491', '0.8445', '0.8435', '0.8424', '0.8421', '0.8430', '0.8454', '0.8538', '0.8735', '0.9068', '0.9375', '0.9540', '0.9574', '0.9528', '0.9388', '0.9212', '0.9054', '0.8709', '0.8136', '0.7262']\n",
+      "At threshold: 0.7000000000000001\n",
+      "\tPrecision: ['0.7367', '0.7384', '0.7400', '0.7406', '0.7422', '0.7450', '0.7510', '0.7674', '0.8040', '0.8676', '0.9319', '0.9712', '0.9849', '0.9885', '0.9908', '0.9939', '0.9951', '0.9962', '0.9976', '0.9994']\n",
+      "\tRecall: ['1.0000', '0.9846', '0.9791', '0.9751', '0.9714', '0.9690', '0.9655', '0.9613', '0.9551', '0.9489', '0.9426', '0.9369', '0.9311', '0.9193', '0.8918', '0.8586', '0.8310', '0.7747', '0.6880', '0.5711']\n",
+      "\tF1: ['0.8484', '0.8439', '0.8429', '0.8418', '0.8415', '0.8424', '0.8449', '0.8535', '0.8731', '0.9064', '0.9372', '0.9537', '0.9573', '0.9526', '0.9387', '0.9213', '0.9057', '0.8716', '0.8144', '0.7269']\n",
+      "At threshold: 0.75\n",
+      "\tPrecision: ['0.6662', '0.6684', '0.6702', '0.6705', '0.6724', '0.6750', '0.6809', '0.6956', '0.7290', '0.7865', '0.8452', '0.8814', '0.8953', '0.9036', '0.9275', '0.9578', '0.9766', '0.9854', '0.9923', '0.9969']\n",
+      "\tRecall: ['1.0000', '0.9857', '0.9806', '0.9764', '0.9731', '0.9709', '0.9680', '0.9637', '0.9577', '0.9513', '0.9455', '0.9402', '0.9361', '0.9293', '0.9232', '0.9150', '0.9018', '0.8474', '0.7568', '0.6300']\n",
+      "\tF1: ['0.7996', '0.7966', '0.7962', '0.7951', '0.7953', '0.7963', '0.7994', '0.8080', '0.8278', '0.8611', '0.8925', '0.9098', '0.9152', '0.9163', '0.9254', '0.9359', '0.9377', '0.9112', '0.8587', '0.7721']\n",
+      "At threshold: 0.8\n",
+      "\tPrecision: ['0.6650', '0.6672', '0.6690', '0.6694', '0.6712', '0.6738', '0.6797', '0.6944', '0.7277', '0.7851', '0.8437', '0.8799', '0.8938', '0.9020', '0.9261', '0.9565', '0.9752', '0.9845', '0.9915', '0.9969']\n",
+      "\tRecall: ['1.0000', '0.9857', '0.9805', '0.9764', '0.9731', '0.9709', '0.9679', '0.9636', '0.9576', '0.9513', '0.9454', '0.9402', '0.9361', '0.9293', '0.9233', '0.9154', '0.9021', '0.8481', '0.7575', '0.6311']\n",
+      "\tF1: ['0.7988', '0.7958', '0.7954', '0.7942', '0.7944', '0.7955', '0.7986', '0.8071', '0.8270', '0.8602', '0.8916', '0.9091', '0.9145', '0.9155', '0.9247', '0.9355', '0.9373', '0.9112', '0.8588', '0.7729']\n",
+      "At threshold: 0.8500000000000001\n",
+      "\tPrecision: ['0.6633', '0.6655', '0.6673', '0.6677', '0.6695', '0.6721', '0.6780', '0.6927', '0.7259', '0.7832', '0.8416', '0.8778', '0.8917', '0.8999', '0.9240', '0.9546', '0.9735', '0.9838', '0.9912', '0.9967']\n",
+      "\tRecall: ['1.0000', '0.9856', '0.9806', '0.9764', '0.9731', '0.9709', '0.9681', '0.9638', '0.9578', '0.9514', '0.9455', '0.9404', '0.9363', '0.9295', '0.9236', '0.9159', '0.9029', '0.8497', '0.7592', '0.6326']\n",
+      "\tF1: ['0.7976', '0.7945', '0.7942', '0.7931', '0.7933', '0.7943', '0.7975', '0.8061', '0.8259', '0.8591', '0.8905', '0.9081', '0.9134', '0.9145', '0.9238', '0.9348', '0.9369', '0.9118', '0.8598', '0.7740']\n",
+      "At threshold: 0.9\n",
+      "\tPrecision: ['0.5493', '0.5515', '0.5539', '0.5546', '0.5561', '0.5585', '0.5635', '0.5760', '0.6040', '0.6522', '0.7022', '0.7326', '0.7442', '0.7513', '0.7721', '0.7978', '0.8181', '0.8682', '0.9599', '0.9897']\n",
+      "\tRecall: ['1.0000', '0.9864', '0.9828', '0.9794', '0.9760', '0.9743', '0.9715', '0.9678', '0.9623', '0.9567', '0.9526', '0.9478', '0.9437', '0.9371', '0.9321', '0.9244', '0.9162', '0.9055', '0.8879', '0.7586']\n",
+      "\tF1: ['0.7091', '0.7074', '0.7085', '0.7082', '0.7085', '0.7100', '0.7133', '0.7222', '0.7422', '0.7756', '0.8084', '0.8264', '0.8322', '0.8340', '0.8446', '0.8564', '0.8644', '0.8865', '0.9225', '0.8589']\n",
+      "At threshold: 0.9500000000000001\n",
+      "\tPrecision: ['0.5122', '0.5144', '0.5166', '0.5173', '0.5186', '0.5210', '0.5258', '0.5377', '0.5641', '0.6090', '0.6556', '0.6844', '0.6951', '0.7016', '0.7208', '0.7447', '0.7637', '0.8109', '0.9009', '0.9774']\n",
+      "\tRecall: ['1.0000', '0.9866', '0.9830', '0.9796', '0.9761', '0.9747', '0.9722', '0.9688', '0.9637', '0.9580', '0.9537', '0.9494', '0.9451', '0.9385', '0.9331', '0.9253', '0.9172', '0.9070', '0.8936', '0.8033']\n",
+      "\tF1: ['0.6774', '0.6763', '0.6773', '0.6771', '0.6774', '0.6791', '0.6825', '0.6916', '0.7116', '0.7447', '0.7770', '0.7954', '0.8011', '0.8029', '0.8133', '0.8252', '0.8334', '0.8563', '0.8973', '0.8818']\n"
+     ]
+    }
+   ],
+   "source": [
+    "for thd in range(len(val_p)):\n",
+    "    print(f\"At threshold: {thd*0.05}\")\n",
+    "    precisions = [f\"{i:.4f}\" for i in val_p[thd]]\n",
+    "    print(f\"\\tPrecision: {precisions}\")\n",
+    "    recalls = [f\"{i:.4f}\" for i in val_r[thd]]\n",
+    "    print(f\"\\tRecall: {recalls}\")\n",
+    "    f1s = [f\"{i:.4f}\" for i in val_f1[thd]]\n",
+    "    print(f\"\\tF1: {f1s}\")"
    ]
   }
  ],
